stylesheet.css
.container {
	display: flex;
}

.btn {
	display: inline-block;
	margin: 10px 125px 0 50px;
}

#apple {
	background-image: url("http://aamodtsapplefarm.com.s132576.gridserver.com/wp-content/uploads/2011/09/honeycrisp-apples.jpg");
	height: 200px;
	width: 200px;
}

#orange {
	background-image: url("http://aamodtsapplefarm.com.s132576.gridserver.com/wp-content/uploads/2011/09/honeycrisp-apples.jpg");
	height: 200px;
	width: 200px;
}

#banana {
	background-image: url("http://aamodtsapplefarm.com.s132576.gridserver.com/wp-content/uploads/2011/09/honeycrisp-apples.jpg");
	height: 200px;
	width: 200px;
}

#grape {
	background-image: url("http://aamodtsapplefarm.com.s132576.gridserver.com/wp-content/uploads/2011/09/honeycrisp-apples.jpg");
	height: 200px;
	width: 200px;
}

